--- a/style.css
+++ b/style.css
@@ -19,3 +19,31 @@ body {
     justify-content: space-between;
     margin: 0 auto;
 }
+.nav-bar .nav-left{
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #3A3A3A;
+}
+.menu-container{
+    /* max-width: 463px; */
+    justify-content: space-around;
+}
+.menu{
+   gap: 34px;
+}
+
+.menu-container .menu li{
+  list-style-type: none;
+}
+.menu-container .menu li a{
+    text-decoration: none;
+    color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+@media screen and (max-width:576px) {
+    .nav-bar {
+    flex-direction: column;
+    }
+}
