--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .poppins-font {
     font-family: "Poppins", sans-serif;
     font-style: normal;
@@ -12,12 +17,22 @@ body {
     display: flex;
 }
 
+/* button style */
+.btn{
+    background-color: #E02C6D;
+    border: none;
+    color: white;
+    padding: 10px;
+    border-radius: 35px;
+}
+
 /* nav bar css style  */
 .nav-bar {
     max-width: 1200px;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 .nav-bar .nav-left{
     font-size: 1.5rem;
@@ -41,6 +56,36 @@ body {
     font-size: 1rem;
     font-weight: 600;
 }
+.banner-container{
+    max-width: 1188px;
+    margin: 0 auto;
+    gap: 133px;
+    
+}
+.banner-details h1{
+    font-size: 52px;
+    color: #3A3A3A;
+    font-weight: 800;
+    margin-bottom: 16px;
+}
+.banner-details p{
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+.banner-photo img{
+    max-width: 440px;
+    max-height: 414px;
+   
+
+}
+.banner-photo{
+    background-image: url("images/Circle\ design.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 
 @media screen and (max-width:576px) {
     .nav-bar {
