--- a/style.css
+++ b/style.css
@@ -22,8 +22,13 @@ body {
     background-color: #E02C6D;
     border: none;
     color: white;
-    padding: 10px;
+    padding: 15px;
     border-radius: 35px;
+    font-size: 16px;
+    font-weight: bold;
+}
+.btn:hover{
+    background-color: #3A3A3A;
 }
 
 /* nav bar css style  */
@@ -32,6 +37,7 @@ body {
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
+    margin-top: 87px;
     margin-bottom: 50px;
 }
 .nav-bar .nav-left{
@@ -58,7 +64,7 @@ body {
 }
 .banner-container{
     max-width: 1188px;
-    margin: 0 auto;
+    margin:80px auto;
     gap: 133px;
     
 }
@@ -74,8 +80,10 @@ body {
     margin-bottom: 16px;
 }
 .banner-photo img{
-    max-width: 440px;
-    max-height: 414px;
+    width: 440px;
+    height: 414px;
+    max-width: 100%;
+    max-height: 100%;
    
 
 }
@@ -86,9 +94,184 @@ body {
     background-size: cover;
 }
 
+/* Main Section start */
+.logo-container{
+    max-width: 1110px;
+    margin: 0 auto;
+    justify-content: space-between;
+    /* border: 1px solid black; */    
+    box-shadow: 5px 5px  15px rgb(161, 161, 161);
+    padding: 36px 62px;
+    margin-bottom: 100px;
+}
+.logo-container img{
+    cursor: pointer;
+}
+/* this is card section */
+.card-section{
+    max-width: 1047px;
+    margin: 0 auto;
+    /* border: 1px solid black; */
+    /* text-align: center; */
+}
+.card-section h3{
+    color: #3A3A3A;
+    line-height: 70px;
+    font-size: 28px;
+    margin-bottom: 30px;
+    text-align: center;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+.card-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    /* margin: 0 auto; */
+    /* align-items: center;
+    justify-content: center; */
+    
+}
+.card-container .card{
+    /* text-align: left; */
+    padding: 17px 15px;
+    margin-bottom: 30px;
+    box-shadow: 5px 5px 9px rgb(171, 168, 168);
+    border-radius: 5px;
+}
+.card-container .card img{
+    max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 16px;
+}
+.card-container .card h4{
+    color: #18191F;
+    line-height: 40px;
+    font-size: 28px;
+}
+.card-container .card:hover{
+    background-color: antiquewhite;
+}
+.card-section .see-more{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+.card-section .see-more a{
+    color: #E02C6D;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 100px;
+}
+
+/* featured section style */
+.featured-section{
+    display: flex;
+    margin: 0 auto;
+    max-width: 1110px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 100px;
+}
+.featured-section .image-featured{
+    margin-right: 96px;
+}
+.featured-section .image-featured img{
+    max-width: 404px;
+    max-height: 270px;
+    /* max-width: 100%; */
+}
+.featured-section .details-featured h2{
+    color: #0A0826;
+    font-size: 38px;
+    font-weight: bold;
+    line-height: 60px;
+    margin-bottom: 16px;
+}
+.featured-section .details-featured p{
+    color: #6C6C6C;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 16px;
+}
+.featured-section .details-featured .without-radius-btn{
+    border-radius: 0;
+    letter-spacing: 2px;
+    padding: 12px 20px;
+    
+}
+/* Footer content is here */
+footer{
+    background-color: rgb(18, 14, 35);
+}
+.footer-container{
+    margin: 0 auto;
+    max-width: 300px;
+    text-align: center;
+    padding: 50px 0;
+}
+.footer-container h4{
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 12px;
+}
+.footer-container p{
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 36px;
+    color: white;
+}
+.footer-container .footer-icon li{
+   list-style-type: none;
+}
+.footer-container .footer-icon{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+
+
 
 @media screen and (max-width:576px) {
     .nav-bar {
     flex-direction: column;
+    margin-top: 50px;
     }
+    .banner-container{
+    margin:0 auto;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    }
+    .logo-container{
+        display: grid;
+        margin-top: 50px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px 0;
+    }
+    .card-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    }
+    .featured-section{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        justify-items: center;
+        margin: 0 auto;
+    }
+    .without-radius-btn{
+        margin-bottom: 30px;
+    }
+    .featured-section .image-featured{
+    margin-right: 0px;
+}
 }
