--- a/style.css
+++ b/style.css
@@ -227,6 +227,8 @@ footer{
 }
 .footer-container .footer-icon li{
    list-style-type: none;
+   margin-top: 10px;
+   
 }
 .footer-container .footer-icon{
     display: flex;
@@ -234,6 +236,13 @@ footer{
     justify-content: center;
 }
 
+.footer-container .footer-icon li a{
+    padding: 5px;
+    /* border: 1px solid white; */
+    border-radius: 50%;
+    /* margin-top: 10px; */
+    background-color:white;
+}
 
 
 
